--- a/docs/_static/AnalogVNN_Demo.ipynb
+++ b/docs/_static/AnalogVNN_Demo.ipynb
@@ -15,7 +15,7 @@
     "id": "04QgGZc9bF5D"
    },
    "source": [
-    "#### To create 3 layered linear photonic analog neural network with 4-bit precision, 0.2 leakage and clamp normalization"
+    "#### To create 3 layered linear photonic analog neural network with 4-bit precision, 0.2 [leakage](https://analogvnn.readthedocs.io/en/v1.0.0/extra_classes.html#leakage-or-error-probability) and clamp normalization"
    ]
   },
   {
@@ -50,6 +50,15 @@
     "    <a href=\"https://github.com/Vivswan/AnalogVNN/raw/v1.0.0/docs/_static/AnalogVNN_Demo.ipynb\"><img src=\"https://www.tensorflow.org/images/download_logo_32px.png\" />Download notebook</a>\n",
     "  </td>\n",
     "</table>"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<img alt=\"3 Layered Linear Photonic Analog Neural Network\" src=\"analogvnn_model.png\" height=\"50px\"/>"
    ],
    "metadata": {
     "collapsed": false
@@ -180,7 +189,9 @@
     "\n",
     "`FullSequential` is sequential model where backward graph is the reverse of forward graph.\n",
     "\n",
-    "To add the Reduce Precision, Normalization, and Noise before and after the main Linear layer, `add_layer` function is used."
+    "To add the Reduce Precision, Normalization, and Noise before and after the main Linear layer, `add_layer` function is used.\n",
+    "\n",
+    "Leakage definition: [https://analogvnn.readthedocs.io/en/v1.0.0/extra_classes.html#leakage-or-error-probability](https://analogvnn.readthedocs.io/en/v1.0.0/extra_classes.html#leakage-or-error-probability)"
    ]
   },
   {
@@ -225,7 +236,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Note: analogvnn.nn.module.Sequential.Sequential.add_sequence() is used to create and set forward and backward graphs in AnalogVNN, more information in Inner Workings"
+    "Note: `analogvnn.nn.module.Sequential.Sequential.add_sequence()` is used to create and set forward and backward graphs in AnalogVNN, more information in Inner Workings"
    ],
    "metadata": {
     "id": "iOkIKXWoZbmn"
@@ -287,7 +298,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Note: Since the “WeightModel” will only be used for converting the data to analog data to be used in the main “ LinearModel”, we can use “eval()” to make sure the “WeightModel” is never been trained"
+    "Note: Since the `WeightModel` will only be used for converting the data to analog data to be used in the main `LinearModel`, we can use `eval()` to make sure the `WeightModel` is never been trained"
    ],
    "metadata": {
     "id": "Dsudt6dXZBnV"
@@ -427,7 +438,7 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "Congratulations! You have trained a 3 layered linear photonic analog neural network with 4-bit precision, 0.2 leakage and clamp normalization."
+    "Congratulations! You have trained a 3 layered linear photonic analog neural network with 4-bit precision, 0.2 [leakage](https://analogvnn.readthedocs.io/en/v1.0.0/extra_classes.html#leakage-or-error-probability) and clamp normalization."
    ]
   },
   {
