--- a/docs/_static/AnalogVNN_Demo.ipynb
+++ b/docs/_static/AnalogVNN_Demo.ipynb
@@ -58,7 +58,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "<img alt=\"3 Layered Linear Photonic Analog Neural Network\" src=\"analogvnn_model.png\" height=\"50px\"/>"
+    "![3 Layered Linear Photonic Analog Neural Network](analogvnn_model.png)"
    ],
    "metadata": {
     "collapsed": false
