--- a/docs/_static/AnalogVNN_Demo.ipynb
+++ b/docs/_static/AnalogVNN_Demo.ipynb
@@ -15,7 +15,7 @@
     "id": "04QgGZc9bF5D"
    },
    "source": [
-    "#### To create 3 layered linear photonic analog neural network with 4-bit precision, 0.2 [leakage](https://analogvnn.readthedocs.io/en/v1.0.0/extra_classes.html#leakage-or-error-probability) and clamp normalization"
+    "#### To create 3 layered linear photonic analog neural network with 4-bit [precision](https://analogvnn.readthedocs.io/en/v1.0.0/extra_classes.html#reduceprecision), 0.2 [leakage](https://analogvnn.readthedocs.io/en/v1.0.0/extra_classes.html#leakage-or-error-probability) and [clamp](https://analogvnn.readthedocs.io/en/v1.0.0/extra_classes.html#clamp) normalization"
    ]
   },
   {
@@ -187,9 +187,9 @@
    "source": [
     "## Build a 3 layered linear photonic analog neural network\n",
     "\n",
-    "`FullSequential` is sequential model where backward graph is the reverse of forward graph.\n",
+    "[`FullSequential`](https://analogvnn.readthedocs.io/en/v1.0.0/autoapi/analogvnn/nn/module/FullSequential/index.html#analogvnn.nn.module.FullSequential.FullSequential) is sequential model where backward graph is the reverse of forward graph.\n",
     "\n",
-    "To add the Reduce Precision, Normalization, and Noise before and after the main Linear layer, `add_layer` function is used.\n",
+    "To add the [Reduce Precision](https://analogvnn.readthedocs.io/en/v1.0.0/extra_classes.html#reduce-precision), [Normalization](https://analogvnn.readthedocs.io/en/v1.0.0/extra_classes.html#normalization), and [Noise](https://analogvnn.readthedocs.io/en/v1.0.0/extra_classes.html#noise) before and after the main Linear layer, `add_layer` function is used.\n",
     "\n",
     "Leakage definition: [https://analogvnn.readthedocs.io/en/v1.0.0/extra_classes.html#leakage-or-error-probability](https://analogvnn.readthedocs.io/en/v1.0.0/extra_classes.html#leakage-or-error-probability)"
    ]
@@ -236,7 +236,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Note: `analogvnn.nn.module.Sequential.Sequential.add_sequence()` is used to create and set forward and backward graphs in AnalogVNN, more information in Inner Workings"
+    "Note: [`analogvnn.nn.module.Sequential.Sequential.add_sequence()`](https://analogvnn.readthedocs.io/en/v1.0.0/autoapi/analogvnn/nn/module/Sequential/index.html#analogvnn.nn.module.Sequential.Sequential.add_sequence) is used to create and set forward and backward graphs in AnalogVNN, more information in Inner Workings"
    ],
    "metadata": {
     "id": "iOkIKXWoZbmn"
@@ -269,9 +269,9 @@
    "source": [
     "## Build a WeightModel \n",
     "\n",
-    "WeightModel is use to parametrize the parameter of LinearModel to simulate photonic weights\n",
+    "WeightModel is used to parametrize the parameter of LinearModel to simulate photonic weights\n",
     "\n",
-    "`FullSequential` is sequential model where backward graph is the reverse of forward graph."
+    "[`FullSequential`](https://analogvnn.readthedocs.io/en/v1.0.0/autoapi/analogvnn/nn/module/FullSequential/index.html#analogvnn.nn.module.FullSequential.FullSequential) is sequential model where backward graph is the reverse of forward graph."
    ]
   },
   {
@@ -325,7 +325,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Using PseudoParameter to parametrize the parameter"
+    "Using [`PseudoParameter`](https://analogvnn.readthedocs.io/en/v1.0.0/inner_workings.html#pseudoparameters) to parametrize the parameter"
    ],
    "metadata": {
     "id": "Dtg27Y80WwR0"
@@ -438,7 +438,7 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "Congratulations! You have trained a 3 layered linear photonic analog neural network with 4-bit precision, 0.2 [leakage](https://analogvnn.readthedocs.io/en/v1.0.0/extra_classes.html#leakage-or-error-probability) and clamp normalization."
+    "Congratulations! You have trained a 3 layered linear photonic analog neural network with 4-bit [precision](https://analogvnn.readthedocs.io/en/v1.0.0/extra_classes.html#reduceprecision), 0.2 [leakage](https://analogvnn.readthedocs.io/en/v1.0.0/extra_classes.html#leakage-or-error-probability) and [clamp](https://analogvnn.readthedocs.io/en/v1.0.0/extra_classes.html#clamp) normalization"
    ]
   },
   {
