--- a/docs/_static/AnalogVNN_Demo.ipynb
+++ b/docs/_static/AnalogVNN_Demo.ipynb
@@ -16,7 +16,7 @@
     "[![Python](https://img.shields.io/badge/python-3.7--3.10-blue)](https://badge.fury.io/py/analogvnn)\n",
     "[![License: MPL 2.0](https://img.shields.io/badge/License-MPL_2.0-blue.svg)](https://opensource.org/licenses/MPL-2.0)\n",
     "\n",
-    "<table class=\"tfo-notebook-buttons\" align=\"center\">\n",
+    "<table class=\"tfo-notebook-buttons\" align=\"left\">\n",
     "  <td>\n",
     "    <a target=\"_blank\" href=\"https://analogvnn.readthedocs.io/en/v1.0.0/tutorial.html\">\n",
     "      <center>\n",
