--- a/docs/_static/AnalogVNN_Demo.ipynb
+++ b/docs/_static/AnalogVNN_Demo.ipynb
@@ -49,10 +49,12 @@
     "      Download notebook\n",
     "    </a>\n",
     "  </td>\n",
-    "</table>\n",
-    "\n",
-    "<br>\n",
-    "\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "#### To create 3 layered linear photonic analog neural network with 4-bit [precision](https://analogvnn.readthedocs.io/en/v1.0.0/extra_classes.html#reduceprecision), 0.5 [leakage](https://analogvnn.readthedocs.io/en/v1.0.0/extra_classes.html#leakage-or-error-probability) and [clamp](https://analogvnn.readthedocs.io/en/v1.0.0/extra_classes.html#clamp) normalization:\n",
     "\n",
     "![3 Layered Linear Photonic Analog Neural Network](analogvnn_model.png)\n",
@@ -60,8 +62,11 @@
     "Python file:\n",
     "[Sample code](https://github.com/Vivswan/AnalogVNN/blob/v1.0.0/sample_code.py)\n",
     "and\n",
-    "[Sample code with logs](https://github.com/Vivswan/AnalogVNN/blob/v1.0.0/sample_code_with_logs.py)\n"
-   ]
+    "[Sample code with logs](https://github.com/Vivswan/AnalogVNN/blob/v1.0.0/sample_code_with_logs.py)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
