use cpu by default

--- a/docs/_static/AnalogVNN_Demo.ipynb
+++ b/docs/_static/AnalogVNN_Demo.ipynb
@@ -118,6 +118,7 @@
     "print(f\"AnalogVNN version: {analogvnn.__version__}\")\n",
     "print(f\"PyTorch version: {torch.__version__}\")\n",
     "\n",
+    "is_cpu_cuda.use_cuda_if_available()\n",
     "torch.manual_seed(0)\n",
     "device, is_cuda = is_cpu_cuda.is_using_cuda\n",
     "print(f\"Device: {device}\")"
