Rewrite super() calls
Signed-off-by: Vivswan Shah <58091053+Vivswan@users.noreply.github.com>

--- a/docs/_static/AnalogVNN_Demo.ipynb
+++ b/docs/_static/AnalogVNN_Demo.ipynb
@@ -209,7 +209,7 @@
    "source": [
     "class LinearModel(FullSequential):\n",
     "    def __init__(self, activation_class, norm_class, precision_class, precision, noise_class, leakage):\n",
-    "        super(LinearModel, self).__init__()\n",
+    "        super().__init__()\n",
     "\n",
     "        self.activation_class = activation_class\n",
     "        self.norm_class = norm_class\n",
@@ -289,7 +289,7 @@
    "source": [
     "class WeightModel(FullSequential):\n",
     "    def __init__(self, norm_class, precision_class, precision, noise_class, leakage):\n",
-    "        super(WeightModel, self).__init__()\n",
+    "        super().__init__()\n",
     "        self.all_layers = []\n",
     "\n",
     "        self.all_layers.append(norm_class())\n",
